kubernetes/7service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: pc-deployment
   namespace: test
spec:
   replicas: 3
   selector:
        matchLabels: 
           app: nginx-pod
   template:
        metadata:
           labels:
              app: nginx-pod
        spec:
           containers:
              - name: nginx
                image: nginx:1.17.1
                ports: 
                  - containerPort: 80
