kubernetes/7service/7.3.2service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-clusterip
    namespace: 7lquan
spec:
    sessionAffinity: ClientIP   # session亲和性，支持ClientIP、None两个选项
    selector:
        app: nginx-pod
    type: ClusterIP
    ports:
      - port: 80 # Service 端口
        targetPort: 80  # pod 端口
