kubernetes/7service/7.3.3service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-clusterip
    namespace: 7lquan
spec:
    sessionAffinity: ClientIP   # session亲和性，支持ClientIP、None两个选项
    selector:
        app: nginx-pod
    clusterIP: 10.96.96.96  # service的ip地址，如果不写，默认会生成一个# 修改分发策略为ClientIP基于客户端地址的会话保持模式
    type: ClusterIP
    ports:
      - port: 80 # Service 端口
        targetPort: 80  # pod 端口
