kubernetes/7service/7.3.4service-headliness.yaml
# service-headliness
apiVersion: v1
kind: Service
metadata:
  name: service-headliness
  namespace: 7lquan
spec:
  selector:
    app: nginx-pod
  clusterIP: None  # 将clusterIP设置为None，即可创建headliness service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
