kubernetes/7service/7.3.7service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-externalname
  namespace: 7lquan

spec:
  type: ExternalName # service类型
  externalName: www.baidu.com  # 改成ip地址也一样
