kubernetes/7service/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-clusterip
    namespace: test
spec:
    sessionAffinity: ClientIP
    selector:
        app: nginx-pod
    clusterIP: 10.97.97.97  # service的ip地址，如果不写，默认会生成一个
    type: ClusterIP
    ports:
      - port: 80 # Service 端口
        targetPort: 80  # pod 端口
