kubernetes/7service/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-externalname
  namespace: test

spec:
  type: ExternalName # service类型
  externalName: www.baidu.com  # 改成ip地址也一样
