kubernetes/7service/service-headliness.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-headliness
  namespace: test
spec:
  selector:
    app: nginx-pod
  clusterIP: None  # 将clusterIP设置为None，即可创建headliness service
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
