kubernetes/7service/tomcat-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
    namespace: test
spec:
    replicas: 3
    selector:
        matchLabels:
            app: nginx-pod
    template:
        metadata:
            labels:
              app: nginx-pod
        spec:
            containers:
            - name: niginx
              image: nginx:1.17.1
              ports:
              - containerPort: 80

---

apiVersion: apps/v1 
kind: Deployment
metadata:
    name: tomcat-deploy
    namespace: test
spec:
    replicas: 3
    selector:
        matchLabels:
            app: tomcat-pod
    template:
        metadata:
            labels:
               app: tomcat-pod
        spec:
            containers:
            - name: tomcat
              image: tomcat:8.5-jre10-slims
              ports: 
              - containerPores: 80




---
apiVersion: v1
kind: Service
metadata:
    name: nginx-service
    namespace: test
spec:
    selector:
        app: ngix-pod
    clusterIP: None
    type: ClusterIP
    ports: 
    - port: 80
      targetPort: 80

---


apiVersion: v1
kind: Service
metadata:
   name: tomcat-service
   namespace: test
spec:
   selector:
       app: tomcat-pod
   clusterIP: None
   type: ClusterIP
   ports:
   - port: 8080
     targetPort: 8080
