kubernetes/7service/7.5.3ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-http
    namespace: 7lquan
spec:
    rules: 
    - host: nginx.lquan.com
      http:
        paths:
        - path: /
          backend:
             serviceName: nginx-service
             servicePort: 80
    - host: tomcat.lquan.com
      http:
        paths:
        - path: /
          backend:
             serviceName: tomcat-service
             servicePort: 8080
